--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <div class="social-links mt-3 text-center">
 
           <a href="https://www.facebook.com/qurbani.emrahov.9/" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/qurbaniemrahov" class="github"><i class="bx bxl-github"></i></a>
 
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/qurbani-%C9%99mrahov-85052421a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
 
         </div>
       </div>
@@ -94,9 +94,9 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web developer | Python</h3>
-            <p class="fst-italic">
+            <!-- <p class="fst-italic">
             Hello,My name is Qurbani and I'm currently working Content Manager at www.toolino.com
-            </p>
+            </p> -->
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -259,27 +259,80 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Content Manager</h4>
-              <h5>10.08.2023-Currently</h5>
-              <!-- <p><em>Content Manager</em></p> -->
+              <p>Toolino LLC</p>
+              <h5>10.08.23-Currently</h5>
               <ul>
-               <li>I have previously shared my latest job information with you. For more detailed information about me, please click on the 'Open CV' or 'Download CV' buttons.</li>
-                <!-- <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus enim officia sed harum vitae reprehenderit! </li>
-                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum qui nemo ea unde aspernatur atque.</li>
-                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis.</li> -->
+               <li>I am engaged in the work of placing content on www.toolino.com website,testing the website,further increasing the purchase and sales processes on the website and increasing the traffic of the site.</li>
+ 
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Project Manager</h4>
+              <p>Proton.az MMC</p>
+              <h5>09.01.23-04.08.23</h5>
+              <ul>
+               <li>Administrative aspects of a program.I'm planing the program,managing the programming team,organize resources,and help achieve target customer requirements.Evaluating students,monitoring program development and applies available tools to eliminating potential problems.</li>
+ 
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Instructor</h4>
+              <p>Impulse Learning Center</p>
+              <h5>05.09.22-01.12.22</h5>
+              <ul>
+               <li>I have taught Python programming language to children up to 14 years old at this educational center.</li>
+ 
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Senior expert-driver</h4>
+              <p>VXSIDA(Asan service)</p>
+              <h5>23.07.18-01.07.22</h5>
+              <ul>
+               <li>I worked a driver</li>
+ 
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Intern</h4>
+              <p>Binagadi District Executive Power</p>
+              <h5>24.07.17-25.09.17</h5>
+              <ul>
+               <li>I have experience in the department of work with territorial administration and local self-goverment structures.</li>
+ 
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Controller</h4>
+              <p>Nasimi District Water Canal Department</p>
+              <h5>21.04.16-02.02.17</h5>
+              <ul>
+               <li>I worked a controller</li>
+ 
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Controller</h4>
+              <p>Binagadi District Water Canal Department</p>
+              <h5>07.10.15-09.03.16</h5>
+              <ul>
+               <li>I worked a controller</li>
+ 
               </ul>
             </div>
            
           </div>
+          
         </div>
 
       </div>
     </section><!-- End Resume Section -->
 
     <!-- download cv -->
-    <div id="cv-buttons">
+    <!-- <div id="cv-buttons">
       <button id="openFileBtn">Open CV</button>
       <button id="dow-nloadFileBtn">Download CV</button>
-  </div>
+  </div> -->
     <!-- download cv -->
 
 
