--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>5 April 1992</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+994702777114</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+994502777114</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Baku,Azerbaijan</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Junior</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Junior</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                     <span>qurbaniemrahov777@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
