--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 
             <div class="progress">
-              <span class="skill">Python<i class="val"></i></span>
+              <span class="skill">PHP<i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -201,7 +201,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Django<i class="val"></i></span>
+              <span class="skill">Laravel<i class="val"></i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">Python<i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
