--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <img src="assets/img/profile-programmer.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Web developer | Python</h3>
+            <h3>Web developer</h3>
             <!-- <p class="fst-italic">
             Hello,My name is Qurbani and I'm currently working Content Manager at www.toolino.com
             </p> -->
@@ -241,7 +241,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Qurbani Amrakhov</h4>
-              <p><em>Web developer | Python</em></p>
+              <p><em>Web developer</em></p>
               <ul>
                 <li>Baku,Azerbaijan</li>
                 <li>+994502777114</li>
